# mudcode

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  README.ko.md  README.md  REFACTOR_PLAN.md  REFACTOR_STAGE1_CHECKLIST.md  REFACTOR_STAGE6_CHECKLIST.md  changes_ubuntu.md  package-lock.json  package.json  task.md  tsconfig.json  tsup.config.ts  wrangler.jsonc
.github/workflows/: auto-version-bump.yml  release-publish.yml
discode-rs/: Cargo.toml  README.md
discode-rs/src/: config.rs  discord.rs  event.rs  main.rs  parser.rs
docs/: ARCHITECTURE.md  DISCORD_SETUP.ko.md  DISCORD_SETUP.md  MODULE_BOUNDARIES.ko.md  MODULE_BOUNDARIES.md  OPENCLAW_MID_OUTPUT_DIFF.ko.md  OPTIMIZATION_NEXT_FEATURES.md  README.ko.md  README.md  RELEASE_NPM.ko.md  SLACK_SETUP.ko.md  SLACK_SETUP.md
docs/architecture/: ARCHITECTURE.md  MODULE_BOUNDARIES.md
hooks/: claude-post-tool.sh  claude-pre-tool.sh  claude-stop.sh  install-hooks.sh
mudcode-rs/: Cargo.toml  README.md
mudcode-rs/src/: config.rs  (+3 more)
scripts/: README.md  auto-bump-version.mjs  build-binaries.ts  build-npm-package.mjs  check-todo-fixme.mjs  ci-local.mjs  pack-release.mjs  postinstall.mjs  prompt-refiner-shadow-to-gepa.mjs  publish-release.mjs  rebuild-release-manifest.mjs  setup-claude-plugin.ts  setup-gemini-hook.ts
site/: index.html  styles.css
src/: daemon.ts  index.ts
tests/: daemon-command.test.ts  daemon-service.test.ts  daemon.test.ts  index.test.ts  mudcode-cli.test.ts  prompt-refiner-policy.test.ts  prompt-refiner-shadow-to-gepa.test.ts  prompt_refiner_gepa_optimize_test.py  start-command.test.ts
(+179 files in other folders)
